--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <script>var exports = {};</script>
 </head>
 <body>
-    <script src="main.js"></script>
+    <script src="LoginScript.js"></script>
     <script>
         if (!tryToLoginStorage()) {
             window.location.href="Login.html";
