--- a/Login.html
+++ b/Login.html
@@ -17,6 +17,6 @@
         <input id="password" type="password"/>
         <button id="loginButton">Login</button>
     </div>
-    <script src="main.js" type="text/javascript"></script>
+    <script src="./LoginScript.js"></script>
 </body>
 </html>
