--- a/Index.html
+++ b/Index.html
@@ -7,13 +7,6 @@
     <script>var exports = {};</script>
 </head>
 <body>
-    <script src="LoginScript.js"></script>
-    <script>
-        if (!tryToLoginStorage()) {
-            window.location.href="Login.html";
-        } else {
-            window.location.href="MainPage.html";
-        }
-    </script>
+    <script type="module" src="Index.js"></script>
 </body>
 </html>
