semi working login again

--- a/MainPage.html
+++ b/MainPage.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muscle Biometrics</title>
-    <script>var exports = {};</script>
-    <script type="module" src="Index.js"></script>
+    <link href="Style.css" rel="stylesheet" type="text/css">
+    <!--<script type="module" src="Index.js"></script>-->
 </head>
 <body>
     <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
-    <script type="module" src="MainPage.js"></script>
+    <script type="module" src="./MainPage.js"></script>
 </body>
 </html>
