--- a/MainPage.html
+++ b/MainPage.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muscle Biometrics</title>
     <link href="Style.css" rel="stylesheet" type="text/css">
-    <!--<script type="module" src="Index.js"></script>-->
 </head>
 <body>
-    <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
+    <canvas id="myChart" style="width:10000px;max-width:1000px"></canvas>
     <script type="module" src="./MainPage.js"></script>
 </body>
 </html>
