man this is hard

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,6 @@
     <title>Muscle Biometrics</title>
 </head>
 <body>
-    <script type="module" src="Index.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
