--- a/MainPage.html
+++ b/MainPage.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <canvas id="myChart" style="width:10000px;max-width:1000px"></canvas>
-    <script type="module" src="./MainPage.js"></script>
+    <script type="module" src="./mainPage.js"></script>
 </body>
 </html>
