fix incorrect file name

--- a/Login.html
+++ b/Login.html
@@ -22,6 +22,6 @@
         </form>
         <p id="error-message" class="error-message"></p>
     </div>
-    <script type="module" src="./LoginScript.js"></script>
+    <script type="module" src="./loginScript.js"></script>
 </body>
 </html>
