add doctor page

--- a/MainPage.html
+++ b/MainPage.html
@@ -7,7 +7,7 @@
     <link href="Style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <canvas id="myChart" style="width:10000px;max-width:1000px"></canvas>
+    <canvas id="myChart" style="width:90%;"></canvas>
     <script type="module" src="./mainPage.js"></script>
 </body>
 </html>
