--- a/MainPage.html
+++ b/MainPage.html
@@ -7,6 +7,7 @@
     <link href="Style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <input id="logout" class="tab" type="button" value="Log out">
     <canvas id="myChart" style="width:90%;"></canvas>
     <script type="module" src="./mainPage.js"></script>
 </body>
