--- a/mainPageDoc.html
+++ b/mainPageDoc.html
@@ -18,7 +18,7 @@
             margin: auto;
         }
         .tab {
-            width: 50%;
+            width: 33.333333%;
             float: left;
         }
         label, input {
@@ -31,6 +31,7 @@
     <div class="tabs">
         <input id="patientTab" class="tab" type="button" value="Patient Info">
         <input id="newPatient" class="tab" type="button" value="Create Patient">
+        <input id="logout" class="tab" type="button" value="Log out">
     </div>
     <div id="containerPatient" class="containerPatient">
         <input id="patientEmail" type="email" placeholder="patient@health.bg" style="width: 50%; display: flex; float:left">
