--- a/mainPage.html
+++ b/mainPage.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muscle Biometrics</title>
     <link href="Style.css" rel="stylesheet" type="text/css">
+    <style>
+        .container {
+            width: 85%;
+            margin: auto;
+        }
+    </style>
 </head>
 <body>
     <input id="logout" class="tab" type="button" value="Log out">
-    <canvas id="myChart" style="width:90%;"></canvas>
+    <div class="container">
+        <canvas id="myChart" style="width:90%;"></canvas>
+    </div>
     <script type="module" src="./mainPage.js"></script>
 </body>
 </html>
